--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-select": "^5.2.1",
     "web-vitals": "^2.1.0",
     "axios": "^0.27.2",
+    "simple-react-hook-form": "^1.0.4",
     "react-toastify": "^9.0.1"
   },
   "scripts": {
